--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <tilte> About Me </tilte>
+    <style type="text/css">
+      h1 { text-align: center; font-family: Helvecta;}</style>
+  </head>
+  <body>
+    <h1>
+      Favorite Foods
+    </h1>
+    <div>
+    <ul>
+      <li><img src="https://cache.dominos.com/olo/6_5_2/assets/build/market/US/_en/images/promo/st-jude_nolo_meal-deal_home_homepage-side-tile_bgOnly.jpg"></li>
+     </ul>
+    </div>
+  </body>
+</html>
 
