--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <tilte> About Me </tilte>
+    <title> About Me </title>
     <style type="text/css">
-      h1 { text-align: center; font-family: Helvecta;}</style>
+      h1 { text-align: center; font-family: Helvetica;}</style>
   </head>
   <body>
     <h1>
